--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,23 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #f1f1f1;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.navbar{
+    height: 70px;
+    display: flex;
+    align-items: center;
+    padding: 0 16px;
+    border: 1px solid #e6e6e6;
+    background-color: #fff;
+}
+#logo{
+  font-size: 27px;
+  font-weight: 700;
 }
