--- a/src/index.css
+++ b/src/index.css
@@ -18,10 +18,24 @@ code {
     display: flex;
     align-items: center;
     padding: 0 16px;
+    margin :2px;
     border: 1px solid #e6e6e6;
     background-color: #fff;
 }
 #logo{
   font-size: 27px;
   font-weight: 700;
+}
+
+.main{
+  width: 750px;
+  margin: 0 auto;
+  margin-top: 26px;
+}
+#search-id{
+  padding: 6px;
+  width: 100%;
+  font-size: 20px;
+  padding-left: 6px;
+  margin-bottom: 50px;
 }
